Building PM olawale's clusters report

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                             <p>Voila! Tracking routine jobs has never been so easy. <span>Welcome to the future</span>.</p>
                         </div>
                         <div class="hero-btn">
-                            <button class="btn btn-1">PM Olawale</button>
-                            <button class="btn btn-2">PM Joshua</button>
+                            <a href="/PM Olawale/intro.html"><button class="btn btn-1">PM Olawale</button></a>
+                            <a><button class="btn btn-2">PM Joshua</button></a>
                         </div>
                     </div>
                 </section>
