Completed the page 2: Mr Olawale & Mr Joshua Pages

--- a/PM Olawale/intro.html
+++ b/PM Olawale/intro.html
@@ -14,13 +14,17 @@
     <main>
         <section>
             <div class="logo">
-                <h3><a href="index.html">CuratedByTunji</a></h3>
+                <h3><a href="/index.html">CuratedByTunji</a></h3>
             </div>
         </section>
         <section class="img-wrapper">
             <div class="hero-img"></div>
-            <h1>MR OLAWALE</h1>
-            <p>Mr Olawale Joseph is the project supervisor charged with the duty of overseeing the upnorth mainland clusters which include Bariga, yaba etc.</p>
+            <div class="hero-text-container">
+                <h1>MR OLAWALE</h1>
+                <div class="hero-text">
+                    <p>Mr Olawale Joseph is the project supervisor charged with the duty of overseeing the upnorth mainland clusters which include Bariga, yaba etc.</p>
+                </div>
+            </div>
         </section>
         <section class="clusters">
             <ul class="clusters-wrapper">
