--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         </div>
                         <div class="hero-btn">
                             <a href="/PM Olawale/intro.html"><button class="btn btn-1">PM Olawale</button></a>
-                            <a><button class="btn btn-2">PM Joshua</button></a>
+                            <a href="/PM Joshua/intro.html"><button class="btn btn-2">PM Joshua</button></a>
                         </div>
                     </div>
                 </section>
