--- a/PM Olawale/intro.html
+++ b/PM Olawale/intro.html
@@ -20,7 +20,7 @@
         <section class="img-wrapper">
             <div class="hero-img"></div>
             <div class="hero-text-container">
-                <h1>MR OLAWALE</h1>
+                <h1>MR <br>OLAWALE</h1>
                 <div class="hero-text">
                     <p>Mr Olawale Joseph is the project supervisor charged with the duty of overseeing the upnorth mainland clusters which include Bariga, yaba etc.</p>
                 </div>
