--- a/PM Joshua/intro.html
+++ b/PM Joshua/intro.html
@@ -30,22 +30,22 @@
             <section class="clusters">
                 <ul class="clusters-wrapper">
                     <li>
-                        <button><a href="/PM Olawale/Bariga.html">Agbado</a></button>
+                        <button><a href="/PM Joshua/Agbado.html">Agbado</a></button>
                     </li>
                     <li>
-                         <button><a href="/PM Olawale/Ikeja-A.html">Agege</a></button>
+                         <button><a href="/PM Joshua/Agege.html">Agege</a></button>
                     </li>
                     <li>
-                        <button><a href="/PM Olawale/Mushin.html">Ayobo</a></button>
+                        <button><a href="/PM Joshua/Ayobo.html">Ayobo</a></button>
                     </li>
                     <li>
-                       <button><a href="/PM Olawale/Oshodi.html">Egbeda</a></button>
+                       <button><a href="/PM Joshua/Egbeda.html">Egbeda</a></button>
                     </li>
                     <li>
-                       <button><a href="/PM Olawale/Yaba.html">Iju</a></button>
+                       <button><a href="/PM Joshua/Iju.html">Iju</a></button>
                     </li>
                     <li>
-                       <button><a href="/PM Olawale/Yaba.html">Ikeja B</a></button>
+                       <button><a href="/PM Joshua/Ikeja B.html">Ikeja B</a></button>
                     </li>
                 </ul>
             </section>
