Added 3 more clusters

--- a/PM Joshua/Agbado.html
+++ b/PM Joshua/Agbado.html
@@ -8,13 +8,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@700&display=swap" rel="stylesheet">
-    <title>Routine Jobs</title>
+    <script src="https://kit.fontawesome.com/a95f65ba1d.js" crossorigin="anonymous"></script>
+    <title>Agbado Cluster</title>
 </head>
 <body>
     <main>
         <section>
             <div class="logo">
-                <h3><a href="index.html">CuratedByTunji</a></h3>
+                <h3><a href="/index.html">CuratedByTunji</a></h3>
             </div>
         </section>
         <section class="img-wrapper">
@@ -260,6 +261,12 @@
                     </tr>
                 </table>
             </section>
+        </section>
+
+        <!----------------------------------------- FOOTER  -->
+
+        <section class="back">
+            <a href="/PM Joshua/intro.html"><span class="arrow"><i class="fa-solid fa-angle-left"></i></span>Back to Clusters</a>
         </section>
         <section class="footer">
             <footer><p><span class="copyright">&#169</span> 2023 Arofin Olatunji. All Rights Reserved</p></footer>
