--- a/PM Joshua/Agege.html
+++ b/PM Joshua/Agege.html
@@ -8,13 +8,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@700&display=swap" rel="stylesheet">
-    <title>Routine Jobs</title>
+    <script src="https://kit.fontawesome.com/a95f65ba1d.js" crossorigin="anonymous"></script>
+    <title>Agege Cluster</title>
 </head>
 <body>
     <main>
         <section>
             <div class="logo">
-                <h3><a href="index.html">CuratedByTunji</a></h3>
+                <h3><a href="/index.html">CuratedByTunji</a></h3>
             </div>
         </section>
         <section class="img-wrapper">
@@ -59,207 +60,163 @@
                         <th>DC-Hybrid</th>
                         <th>Electrical</th>
                         <th>Janitorial</th>
-                    </tr>
-                    <tr id="LG0028">
-                        <td class=>LG0028</td>
-                        <td class="LG0028dc">DC-Hybrid</td>
-                        <td class="LG0028e">Electrical</td>
-                        <td class="LG0028j">Janitorial</td>
-                    </tr>
-                    <tr id="LG0049">
-                        <td class="LG0049">LG0049</td>
-                        <td >DC-Hybrid</td>
-                        <td>Electrical</td>
-                        <td>Janitorial</td>
-                    </tr>
-                    <tr id="LG0119">
-                        <td>LG0119</td>
+                
+                    <tr id="LG0030">
+                        <td>LG0030</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr  id="LG0124">
-                        <td>LG0124</td>
+                    <tr  id="LG0113">
+                        <td>LG0113</td>
                        <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG0179">
-                        <td>LG0179</td>
+                    <tr id="LG0121">
+                        <td>LG0121</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr  id="LG0411">
-                        <td>LG0411</td>
+                    <tr  id="LG0280">
+                        <td>LG0280</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr>
-                        <td id="LG0418">LG0418</td>
+                    <tr id="LG0283">
+                        <td>LG0283</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr>
-                        <td id="LG0426">LG0426</td>
+                    <tr id="LG0567">
+                        <td>LG0567</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG0570">
-                        <td>LG0570</td>
-                        <td class="LG0570dc">DC-Hybrid</td>
-                        <td class="0570e">Electrical</td>
-                        <td class="LG0570j">Janitorial</td>
-                    </tr>
-                    <tr  id="LG0571">
-                        <td>LG0571</td>
+                    <tr id="LG0650">
+                        <td>LG0650</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG0702">
-                        <td>LG0702</td>
+                    <tr id="LG0658">
+                        <td>LG0658</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr  id="LG0704">
-                        <td>LG0704</td>
+                    <tr id="LG0659">
+                        <td>LG0659</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG0732">
-                        <td>LG0732</td>
+                    <tr id="LG0661">
+                        <td>LG0661</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr  id="LG0773">
-                        <td>LG0773</td>
+                    <tr id="LG0663">
+                        <td>LG0663</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr  id="LG0774">
-                        <td>LG0774</td>
+                    <tr id="LG0666">
+                        <td>LG0666</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr  id="LG0775">
-                        <td>LG0775</td>
+                    <tr id="LG0735">
+                        <td>LG0735</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr  id="LG0849">
-                        <td>LG0849</td>
+                    <tr id="LG0938">
+                        <td>LG0938</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr>
-                        <td id="LG0890">LG0890</td>
+                    <tr id="LG1669">
+                        <td>LG1669</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr>
-                        <td id="LG0906">LG0906</td>
+                    <tr id="LG1670">
+                        <td>LG1670</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr>
-                        <td id="LG1781">LG1781</td>
+                    <tr id="LG1786">
+                        <td>LG1786</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr>
-                        <td id="LG1861">LG1861</td>
+                    <tr id="LG1795">
+                        <td>LG1795</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr>
-                        <td id="LG1904">LG1904</td>
+                    <tr id="LG2604">
+                        <td>LG2604</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr>
-                        <td id="LG2078">LG2078</td>
+                    <tr id="LG2781">
+                        <td>LG2781</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr>
-                        <td id="LG2158">LG2158</td>
+                    <tr id="LG2881">
+                        <td>LG2881</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr>
-                        <td id="LG2559">LG2559</td>
+                    <tr id="LG3023">
+                        <td>LG3023</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr>
-                        <td id="LG3621">LG3621</td>
+                    <tr id="LG3322">
+                        <td>LG3322</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr>
-                        <td id="LG3626">LG3626</td>
+                    <tr id="LG3365">
+                        <td>LG3365</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr>
-                        <td id="LG4221">LG4221</td>
+                    <tr id="LG4501">
+                        <td>LG4501</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr>
-                        <td id="LG4432">LG4432</td>
-                        <td>DC-Hybrid</td>
-                        <td>Electrical</td>
-                        <td>Janitorial</td>
-                    </tr>
-                    <tr>
-                        <td id="LG5405">LG5405</td>
-                        <td>DC-Hybrid</td>
-                        <td>Electrical</td>
-                        <td>Janitorial</td>
-                    </tr>
-                    <tr>
-                        <td id="LG5583">LG5583</td>
-                        <td>DC-Hybrid</td>
-                        <td>Electrical</td>
-                        <td>Janitorial</td>
-                    </tr>
-                    <tr>
-                        <td id="LG6542">LG6542</td>
-                        <td>DC-Hybrid</td>
-                        <td>Electrical</td>
-                        <td>Janitorial</td>
-                    </tr>
-                    <tr>
-                        <td id="OG1879">OG1879</td>
-                        <td>DC-Hybrid</td>
-                        <td>Electrical</td>
-                        <td>Janitorial</td>
-                    </tr>
+                    
                 </table>
             </section>
+        </section>
+        <section class="back">
+            <a href="/PM Joshua/intro.html"><span class="arrow"><i class="fa-solid fa-angle-left"></i></span>Back to Clusters</a>
         </section>
         <section class="footer">
             <footer><p><span class="copyright">&#169</span> 2023 Arofin Olatunji. All Rights Reserved</p></footer>
